--- a/src/app/client/src/assets/styles/global.scss
+++ b/src/app/client/src/assets/styles/global.scss
@@ -27,35 +27,11 @@ body {
     }
   }
 }
-@include respond-above(lg) {
-  body {
-    .footer-fix {
-      padding-bottom: 56px;
-    }
-  }
-}
-@include respond-between(md, lg) {
-  body {
-    .footer-fix {
-      padding-bottom: 64px;
-    }
-  }
-}
-@include respond-between(sm, md) {
-  body {
-    .footer-fix {
-      padding-bottom: 112px;
-    }
-  }
-}
+
 @include respond-above(sm) {
   body {
-    padding-bottom: 168px;
     .pusher {
       padding-bottom: 240px !important;
-    }
-    .footer-fix {
-      min-height: calc(100vh - 168px);
     }
     .sb-mid-container-min-height {
       min-height: calc(100vh - 288px);
@@ -64,17 +40,15 @@ body {
   }
 }
 @include respond-below(sm) {
-  .footer-fix {
-    min-height: calc(100vh - 336px);
-    padding-bottom: $base-block-space * 3;
+  .download-mobile-app .download-mobile-app-logo{
+    min-height: 116px;
   }
 }
 .sb-offline {
   padding-bottom: 0px;
-  // .footer-fix {
-  //   min-height: calc(100vh - 180px);
-  // }
 }
+
+
 
 *[lang="en"] body {
   font-family: $font-stack-en;
@@ -104,6 +78,11 @@ body {
     .dial-section-column {
       border-right: 0px solid rgba(51, 51, 51, 0.1) !important;
       border-left: 1px solid rgba(51, 51, 51, 0.1);
+    }
+  }
+  @include respond-above(sm) {
+    .download-mobile-app .download-mobile-app-logo{
+      min-height: 168px;
     }
   }
 }
@@ -242,4 +221,11 @@ app-workspace {
       max-width: 100%;
     }
   }
+}
+
+.sb-workspace-bg{
+  position: relative;
+  bottom: -35px;
+  height: auto;
+  margin-top: -35px;
 }
