--- a/src/app/client/src/assets/styles/layout/_footer.scss
+++ b/src/app/client/src/assets/styles/layout/_footer.scss
@@ -156,7 +156,6 @@
 @media screen and (max-width: 767px) {
 
   .download-mobile-app {
-    bottom: 206px;
     margin: 0 auto;
     right: 0;
     left: 0;
@@ -182,11 +181,11 @@
     }
 
   .footer {
-    max-height: 206px;
+    max-height: 225px;
     .footerMenu {
       ul {
         margin-top: 0 !important;
-        margin-bottom: 24px !important;
+        margin-bottom: 0px !important;
       }
 
       li {
